--- a/src/content/docs/development/boba-backend/using-postman.mdx
+++ b/src/content/docs/development/boba-backend/using-postman.mdx
@@ -1,5 +1,6 @@
 ---
 title: Using Postman
+lastUpdated: 2025-04-20
 sidebar:
   order: 7
 ---
@@ -102,7 +103,7 @@ environment.
 
    Your request should now have the correct authorization header.
 
-   <Aside type="tip">
+   <Aside type="tip" icon="star">
 
    Your authentication token will expire after an hour. You will need to
    reauthenticate again after that by sending another **Authentication HTTP
