--- a/src/content/docs/development/contribute/before-you-start.mdx
+++ b/src/content/docs/development/contribute/before-you-start.mdx
@@ -1,5 +1,6 @@
 ---
 title: How to Start Contributing
+lastUpdated: 2025-04-20
 sidebar:
   order: 1
 ---
@@ -10,7 +11,7 @@ Before you start, consider reading the [codebase overview](../intro) to
 understand the different areas of the project and the technologies used in each
 of them.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **You don't need to have deep knowledge of all involved technologies/programming
 languages to contribute to BobaBoard.** You also don't need to be a
@@ -53,7 +54,7 @@ codebase and its state. Once you agree on the issue you're going to be tackling,
 she will create a WIP document defining the goal of the projects and the
 relevant steps. She will also guide you in installing the relevant codebases.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If you want to explore the codebase on your own, look at the Setting up your Dev
 Env page.
@@ -79,7 +80,7 @@ ready. You can
 [learn more about the development lifecycle](../knowledge-base/development-lifecycle)
 in our knowledge base.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 The unstable and early nature of the codebase makes it even more important to
 break up your changes in smaller chunks! Ms. Boba can help break down tasks in
@@ -87,7 +88,7 @@ manageable pieces!
 
 </Aside>
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 Ms. Boba is really friendly and loves to info dump! If you're blocked or
 confused, reach out to her for help!
