--- a/src/content/docs/development/contribute/boba-components.mdx
+++ b/src/content/docs/development/contribute/boba-components.mdx
@@ -1,5 +1,6 @@
 ---
 title: Install boba-components
+lastUpdated: 2025-04-20
 sidebar:
   order: 6
 ---
@@ -33,7 +34,7 @@ cd boba-components
 yarn install
 ```
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 The commands shown use HTTPS to interact with the code on GitHub but you can do
 so with SSH if you've got it set up
@@ -136,7 +137,7 @@ boba-editor as part of updating boba-components.
    You can now continue to the
    [development instructions](#development-instructions).
 
-   <Aside type="tip">
+   <Aside type="tip" icon="star">
 
    If you make changes to boba-editor and want to see them reflected in
    boba-components, run `yarn run build` in the boba-editor folder.
@@ -166,7 +167,7 @@ You should now have a DevServer running at
 [http://localhost:6006](http://localhost:6006) that will look something like
 [the online demo](https://boba-components.netlify.app/).
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If new code dependencies have been added, you might need to re-run
 `yarn install`. If the above command is giving you problems, give it a try!
