--- a/src/content/docs/development/contribute/boba-editor.mdx
+++ b/src/content/docs/development/contribute/boba-editor.mdx
@@ -1,5 +1,6 @@
 ---
 title: Install boba-editor
+lastUpdated: 2025-04-20
 sidebar:
   order: 7
 ---
@@ -32,7 +33,7 @@ cd boba-editor
 yarn install
 ```
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If you would prefer to use a GUI with GitHub, you can
 [fork and clone](https://docs.github.com/en/desktop/contributing-and-collaborating-using-github-desktop/adding-and-cloning-repositories/cloning-and-forking-repositories-from-github-desktop)
@@ -63,7 +64,7 @@ You should now have a DevServer running at
 [http://localhost:6006](http://localhost:6006) that will look something like
 [the online demo](https://boba-editor.netlify.app/).
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If new code dependencies have been added, you might need to re-run
 `yarn install`. If the above command is giving you problems, give it a try!
