--- a/src/content/docs/development/contribute/setting-up-dev-env.mdx
+++ b/src/content/docs/development/contribute/setting-up-dev-env.mdx
@@ -1,5 +1,6 @@
 ---
 title: Setup Your Development Environment
+lastUpdated: 2025-04-20
 sidebar:
   order: 2
 ---
@@ -9,7 +10,7 @@ import { Aside } from "@astrojs/starlight/components";
 This is an overview of the programs you'll need to install before developing for
 BobaBoard.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **Developing for BobaBoard requires use of the command line.** While this might
 seem scary, the amount of commands needed is minimal and they can often be run
@@ -85,7 +86,7 @@ install NVM.
 
 </Aside>
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 While NVM isn't natively supported on Windows, you can get access to it through
 [WSL](https://learn.microsoft.com/en-us/windows/dev-environment/javascript/nodejs-on-wsl).
@@ -99,7 +100,7 @@ automatically downloads and installs the external code that BobaBoard depends
 on**, without you having to manually download everything yourself. Yarn is also
 used to hide complex scripts under simpler commands like `yarn run test`.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 Using `npm` instead of `yarn` will result in errors. You can blame React for
 that.
