--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -1,5 +1,6 @@
 ---
 title: How to install WSL
+lastUpdated: 2025-04-20
 sidebar:
   order: 3
 ---
@@ -112,7 +113,7 @@ instructions to set Powershell 7 as your default profile.
 
 **Congrats! You've now installed WSL2 with an Ubuntu distro!**
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 You might need to restart so that Windows fully recognizes your WSL. If at any
 point your WSL behaves strangely by not recognizing that
@@ -203,7 +204,7 @@ issue.
    If your install is successful, your terminal should retun `nvm` as the
    response.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If your terminal doesn't recognize the nvm command, try closing your terminal
 and reopening it. If that fails, you may need to restart Windows.
@@ -352,7 +353,7 @@ and WSL.
 
   </Aside>
 
-  <Aside type="tip">
+  <Aside type="tip" icon="star">
 
   If you have extensions you like to use in Windows which you would like to use
   in WSL, navigate to the Extensions panel and click the cloud download next to
