--- a/src/content/docs/development/knowledge-base/development-lifecycle.mdx
+++ b/src/content/docs/development/knowledge-base/development-lifecycle.mdx
@@ -1,5 +1,6 @@
 ---
 title: Development Lifecycle
+lastUpdated: 2025-04-20
 sidebar:
   order: 2
 ---
@@ -267,7 +268,7 @@ with the following messages:
 - 2nd commit: `Style read more button`
 - 3rd commit: `Display text when read more button is clicked`
 
-<Aside type="tip" title="Keep it short and sweet">
+<Aside type="tip" icon="star" title="Keep it short and sweet">
 
 Commit messages have limited characters. It's best to make them descriptive
 enough so future-you and whoever is reading your code understands what you've
@@ -302,7 +303,7 @@ request specific people to take a look at your PR, but not everyone will know
 what you're working on, so you should do your best to explain it so even those
 with no context understand.
 
-<Aside type="tip"  title="Open Pull Requests Early">
+<Aside type="tip" icon="star"  title="Open Pull Requests Early">
 
 It can be a good idea to open pull requests even before your changes are fully
 ready to be merged. This allows you to start a conversation about the code
@@ -349,7 +350,7 @@ Once the pull request is approved, the pull request is "merged" and "closed".
 Once merged, your code becomes part of the `main` branch in the original
 `upstream` codebase. You can now delete the "feature branch" created in step 1.
 
-<Aside type="tip" title="Branch Maintenance">
+<Aside type="tip" icon="star" title="Branch Maintenance">
 
 You can use GitHub's "Delete Branch" button to delete your branches, but you
 might find that your local branches still appear in VS Code or that your own
