--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Welcome to BobaBoard Docs
+lastUpdated: 2025-04-20
 topic: project # Needed for sidebar topic plugin to work if template is set to doc so sidebar will show on landing page
 template: doc
 tableOfContents: false
