--- a/src/content/docs/users/dmca-policy.mdx
+++ b/src/content/docs/users/dmca-policy.mdx
@@ -1,5 +1,6 @@
 ---
 title: DMCA policy
+lastUpdated: 2025-04-20
 ---
 
 BobaBoard respects the intellectual property rights of others. Per the DMCA, we
