--- a/src/content/docs/volunteering/coding/github/labels.mdx
+++ b/src/content/docs/volunteering/coding/github/labels.mdx
@@ -1,5 +1,6 @@
 ---
 title: Issue Labels
+lastUpdated: 2025-04-20
 draft: true
 ---
 
@@ -31,7 +32,7 @@ macro-categories:
 We also have a set of [**other labels**](#other-labels) that do not fit in these
 categories.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 Click on any label to see the associated issues.
 
