--- a/src/content/docs/volunteering/communications/editing-bobadocs.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs.mdx
@@ -1,5 +1,6 @@
 ---
 title: Editing boba-docs
+lastUpdated: 2025-04-20
 sidebar:
   order: 1
 ---
@@ -45,7 +46,7 @@ Here are the steps to do this:
 
 ![a cropped screenshot of the boba-docs github page, with a red arrow pointing to the fork button](/img/volunteer/bobadocsfork.jpg)
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 By the way! To do this right, you'd also need to branch. Read our
 [knowledge base](/docs/volunteering/coding/github/understanding-github) to learn
@@ -74,7 +75,7 @@ this easy to do. Here's how you get to it:
    your copy of the files. _Use this editor._ Like before, you can tell you're
    in the right place if `[USERNAME]/boba-docs` appears on the top left.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 Remember how the last tip mentioned branching? That last bullet is there to keep
 you from accidentally creating a branch (something outside the scope of this
@@ -112,7 +113,7 @@ Use this tab often. Clicking the "Show diff" button on the top right of preview
 will highlight the changes you've made to the file, making it easy to see what
 you've done so far. Use show diff often.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 Notice how GitHub's preview doesn't look exactly the same as the page on
 Docusaurus? That's because Docusaurus makes use of tools that GitHub's editor
