--- a/src/content/docs/volunteering/community/our-bubbles.mdx
+++ b/src/content/docs/volunteering/community/our-bubbles.mdx
@@ -1,5 +1,6 @@
 ---
 title: Quick introduction to bubbles
+lastUpdated: 2025-04-20
 sidebar:
   order: 1
 ---
@@ -33,7 +34,7 @@ organization. Any decisions outside the domains of the more specialized bubble.
 Adjudication of other bubbles' domains if there is ever confusion over who is
 responsible for what.
 
-<Aside type="tip" title="Not sure whose job it is?">
+<Aside type="tip" icon="star" title="Not sure whose job it is?">
 
 The buck stops with Steering! If you don't know which bubble should handle
 something, or whether your bubble is ALLOWED to handle something, you can ask
