--- a/src/content/docs/volunteering/experience/code-of-conduct.mdx
+++ b/src/content/docs/volunteering/experience/code-of-conduct.mdx
@@ -1,5 +1,6 @@
 ---
 title: Code of Conduct
+lastUpdated: 2025-04-20
 sidebar:
   order: 4
 ---
@@ -8,7 +9,7 @@ import { Aside } from "@astrojs/starlight/components";
 
 This guide goes over the code of conduct for BobaBoard's volunteers.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **This document and the surrounding processes are a living document.**
 Volunteers are empowered to propose changes, adjustments and additions.
@@ -25,7 +26,7 @@ itself. At the same time, because of the nature of fandom spaces, the range of
 topics discussed is likely to exceed what would be appropriate in a conventional
 workplace.
 
-<Aside type="tip" title="Values at a glance">
+<Aside type="tip" icon="star" title="Values at a glance">
 
 - Be mindful and courteous to fellow volunteers.
 - Value de-escalation of conflict.
