--- a/src/content/docs/volunteering/experience/intro.mdx
+++ b/src/content/docs/volunteering/experience/intro.mdx
@@ -1,5 +1,6 @@
 ---
 title: Introduction
+lastUpdated: 2025-04-20
 sidebar:
   order: 1
 ---
@@ -69,7 +70,7 @@ volunteer**. This means volunteers are expected to:
 - Proactively let us know how we can help make their experience better, or
   smooth out problems for them.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If life or other issues get in the way of a commitment you've made, <ins>let us
 know</ins>! We'll reassign the task with no judgement.
