--- a/src/content/docs/volunteering/general/leading-a-retro.mdx
+++ b/src/content/docs/volunteering/general/leading-a-retro.mdx
@@ -1,5 +1,6 @@
 ---
 title: Leading a Retrospective
+lastUpdated: 2025-04-20
 sidebar:
   order: 3
 ---
@@ -15,7 +16,7 @@ a blameless process**. A retrospective must focus on finding solutions to issues
 that improve processes, and the language used by participants must adhere to
 [the prime directive of retrospectives](https://retrospectivewiki.org/index.php?title=The_Prime_Directive):
 
-<Aside type="tip" title="The Prime Directive of Retrospectives">
+<Aside type="tip" icon="star" title="The Prime Directive of Retrospectives">
 
 "Regardless of what we discover, **we understand and truly believe that everyone
 did the best job they could**, given what they knew at the time, their skills
@@ -46,7 +47,7 @@ The retrospective lead:
    - If the disruption continues, **call for a timeout and discuss further
      actions with other moderators.**
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 A productive retrospective is a shared goal. While the lead has the ultimate
 responsibility for the above, every participant is empowered to help!
