--- a/src/content/docs/volunteering/general/retrospectives.mdx
+++ b/src/content/docs/volunteering/general/retrospectives.mdx
@@ -1,5 +1,6 @@
 ---
 title: Retrospectives
+lastUpdated: 2025-04-20
 sidebar:
   order: 2
 ---
@@ -56,7 +57,7 @@ A retrospective goes through three phases:
 3. Participants brainstorm ways to continue and expand the practices in #1 while
    avoiding the mistakes in #2
 
-<Aside type="tip" title="What should I bring to the retrospective?">
+<Aside type="tip" icon="star" title="What should I bring to the retrospective?">
 
 There's no need to write down long explanations. In our experiences, a list of
 bullet points for each section works best! Further insights will naturally
@@ -136,7 +137,7 @@ capture what's discussed. Summaries of past retrospectives can be periodically
 reviewed and taken into consideration as new practices emerge, and offer a
 blueprint for what to strive for in the longer term.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 If there's a retrospective item you particularly care about seeing implemented,
 you should feel empowered to take on some of the work! Ms Boba or other
