--- a/src/content/docs/development/boba-backend/apis/API-guidelines.mdx
+++ b/src/content/docs/development/boba-backend/apis/API-guidelines.mdx
@@ -1,5 +1,6 @@
 ---
 title: API Guidelines
+lastUpdated: 2025-04-20
 ---
 
 These rules must be followed when creating new API endpoint in boba-backend.
