--- a/src/content/docs/development/boba-backend/getting-started.mdx
+++ b/src/content/docs/development/boba-backend/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started
+lastUpdated: 2025-04-20
 sidebar:
   order: 1
 ---
@@ -83,14 +84,14 @@ You can test the server is running by opening
 see a list of all the realm properties in
 [JSON format](https://developers.squarespace.com/what-is-json).
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 Accessing a URL through a browser is equivalent to making a GET request to the
 same URL through [Postman](/docs/development/boba-backend/using-postman).
 
 </Aside>
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **The above commands will automatically restart the server on any code change
 you make. **
