--- a/src/content/docs/development/intro.mdx
+++ b/src/content/docs/development/intro.mdx
@@ -1,5 +1,6 @@
 ---
 title: Codebase Overview
+lastUpdated: 2025-04-20
 sidebar:
   order: 1
 ---
@@ -56,7 +57,7 @@ Since other BobaBoard codebases should not interact with this format directly,
 **boba-editor also exports utilities to manipulate the Delta format itself**
 (e.g. extracting images for upload, removing trailing spaces, etc).
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **Edit this codebase if:** you want to give users more input options, including
 embeds, images and gifs.
@@ -74,7 +75,7 @@ separate from the "frontend/server logic" as possible to facilitate reuse and
 [StoryBook](https://storybook.js.org/), which you can see in action at this
 [demo link](https://bobaboard-ui.netlify.app/).
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **Edit this codebase if:** you want to improve the functionality/look of
 specific boba-components elements, like buttons, contributions, sidebar
@@ -91,7 +92,7 @@ user experience, putting together the components defined in boba-components (see
 above) into logical pages, and handling the communication between the user and
 the server. Based on [NextJS](https://nextjs.org/).
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **Edit this codebase if:** you want to change how UI elements come together to
 create pages like boards, threads, settings and the related user flows.
@@ -111,7 +112,7 @@ BobaBoard's PostgreSQL DB.
 Other technologies used include a [Redis Cache](https://redis.io/) and
 [Jest](https://jestjs.io/) for testing.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 **Edit this codebase if:** you want to add new functionality to BobaBoard that
 goes beyond the interaction with the user (or fix existing bugs).
