--- a/src/content/docs/development/testing/testing-basics.mdx
+++ b/src/content/docs/development/testing/testing-basics.mdx
@@ -1,5 +1,6 @@
 ---
 title: Testing Basics
+lastUpdated: 2025-04-20
 ---
 
 import { Aside } from "@astrojs/starlight/components";
@@ -20,7 +21,7 @@ particular place.
 If you are working on changes, or a new feature, please add appropriate tests
 and run the existing tests on your changes.
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 At the moment, there are many existing parts of the Boba codebase that need
 tests written for them. If you're a beginner looking to get involved, writing
