correct broken link.

--- a/src/content/docs/development/contribute/boba-backend.mdx
+++ b/src/content/docs/development/contribute/boba-backend.mdx
@@ -102,5 +102,5 @@ Open `firebase-sdk.json` and paste the following content within it:
 
 ## Start a local server
 
-You can now [follow the instructions](../boba-backend/getting-started) in the
+You can now [follow the instructions](../../boba-backend/getting-started) in the
 boba-backend guide and start your own local server.
