--- a/src/content/docs/development/contribute/boba-backend.mdx
+++ b/src/content/docs/development/contribute/boba-backend.mdx
@@ -1,5 +1,6 @@
 ---
 title: Install boba-backend
+lastUpdated: 2025-04-20
 sidebar:
   order: 4
 ---
@@ -36,7 +37,7 @@ cd boba-backend
 yarn install
 ```
 
-<Aside type="tip">
+<Aside type="tip" icon="star">
 
 The commands shown on this page use HTTPS to interact with the code on GitHub
 but you can do so with SSH if you're comfortable
@@ -101,5 +102,5 @@ Open `firebase-sdk.json` and paste the following content within it:
 
 ## Start a local server
 
-You can now [follow the instructions](../boba-backend/getting-started) in the
+You can now [follow the instructions](../../boba-backend/getting-started) in the
 boba-backend guide and start your own local server.
