Update boba-frontend.mdx - Correct aside types

--- a/src/content/docs/development/contribute/boba-frontend.mdx
+++ b/src/content/docs/development/contribute/boba-frontend.mdx
@@ -60,7 +60,7 @@ use `http://REALM_NAME_boba.local` addresses to simulate multiple realms.
 1. Run `yarn run dev:bonjour`
 2. Go to `http://twisted-minds_boba.local:3000` in your browser.
 
-<Aside type="caution">
+<Aside type="tip" icon="star">
 
 Do ask for help if you encounter problems! If you're on a Linux machine, you may
 need to start the Avahi daemon.
@@ -105,7 +105,7 @@ cd boba-frontend
 yarn link @bobaboard/ui-components
 ```
 
-<Aside type="caution">
+<Aside type="note">
 
 To see changes to boba-components reflected in boba-frontend, you must run
 `yarn run build` in the `boba-components` folder. boba-frontend should then pick
