restored broken images

--- a/src/content/docs/development/legacy-pages/bobaeditor-codebase-guide.mdx
+++ b/src/content/docs/development/legacy-pages/bobaeditor-codebase-guide.mdx
@@ -23,7 +23,9 @@ There are two important folders:
 
 ### Src Folder
 
-![Editor.tsx codes the editor as a whole, the custom-nodes folder contains classes for custom functionality, Tooltip.tsx codes the embeds toolbar, and TenorKeyboard.jsx codes the Tenor plugin.](/img/legacy/classes.png)
+![Editor.tsx codes the editor as a whole, the custom-nodes folder contains 
+classes for custom functionality, Tooltip.tsx codes the embeds toolbar, and 
+TenorKeyboard.jsx codes the Tenor plugin.](../../../../assets/img/legacy/classes.png)
 
 The main editor component is **`Editor.tsx`**. This is a React Class Component
 which wraps a QuillJS editor within itself. It takes care of displaying text
