--- a/src/content/docs/users/how-to/identities.mdx
+++ b/src/content/docs/users/how-to/identities.mdx
@@ -48,15 +48,9 @@ all the time?**" When you look at a post or comment you make, you will see both
 the assigned anonymous identity and your actual account avatar; that way you can
 keep track of who you are in the thread with a quick glance.
 
-<figure>
-  <img src="../../../../assets/img/userguide/youridentity.png" />
-  <figcaption>Your View</figcaption>
-</figure>
+![Your View](../../../../assets/img/userguide/youridentity.png)
 
-<figure>
-  <img src="../../../../assets/img/userguide/otherusers.png" />
-  <figcaption>Another User's View</figcaption>
-</figure>
+![Another User's View](../../../../assets/img/userguide/otherusers.png)
 
 ## Maintaining Your Anonymity
 
