--- a/src/content/docs/volunteering/communications/editing-bobadocs.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs.mdx
@@ -44,7 +44,7 @@ Here are the steps to do this:
    the top left of the page. It should say `[USERNAME]/boba-docs` with
    `forked from essential-randomness/boba-docs` in smaller text under it.
 
-![a cropped screenshot of the boba-docs github page, with a red arrow pointing to the fork button](/img/volunteer/bobadocsfork.jpg)
+![a cropped screenshot of the boba-docs github page, with a red arrow pointing to the fork button](../../../../assets/img/volunteer/bobadocsfork.jpg)
 
 <Aside type="tip" icon="star">
 
@@ -96,7 +96,7 @@ it, or any other guide, handy as a reference while you work.
 
 We will now focus on things specific to GitHub's editor.
 
-![a screenshot of github's editor with red arrows pointing to the preview and markdown guide buttons](/img/volunteer/bobadocseditor.jpg)
+![a screenshot of github's editor with red arrows pointing to the preview and markdown guide buttons](../../../../assets/img/volunteer/bobadocseditor.jpg)
 
 On the bottom right of the editor is a button with an M next to an arrow
 pointing down. This is short for "markdown", and clicking the button will direct
@@ -107,7 +107,7 @@ another good reference.
 On the top left of the editor is a "Preview" tab, which will let you look at
 your work before saving it.
 
-![a screenshot of github's editor preview. a red arrow is pointing to the "show diff" button](/img/volunteer/bobadocspreview.jpg)
+![a screenshot of github's editor preview. a red arrow is pointing to the "show diff" button](../../../../assets/img/volunteer/bobadocspreview.jpg)
 
 Use this tab often. Clicking the "Show diff" button on the top right of preview
 will highlight the changes you've made to the file, making it easy to see what
@@ -126,13 +126,13 @@ between different elements to avoid errors.
 Once you're satisfied with your changes, it's time to save them. Scroll down the
 page.
 
-![a screenshot of github's commit form. red arrows are pointing at the input textboxes and submit button](/img/volunteer/bobadocscommit.jpg)
+![a screenshot of github's commit form. red arrows are pointing at the input textboxes and submit button](../../../../assets/img/volunteer/bobadocscommit.jpg)
 
 Title your changes, and write a description for them. Once you're satisfied with
 that, click the "Commit" button to save the changes. After saving your changes,
 click back to the main page of your repo.
 
-![a screenshot of github's repo page, with a red arrow pointing to the pull request button](/img/volunteer/bobadocsaftercommit.jpg)
+![a screenshot of github's repo page, with a red arrow pointing to the pull request button](../../../../assets/img/volunteer/bobadocsaftercommit.jpg)
 
 You'll notice that GitHub has noticed that you made changes. If you want to edit
 more than one page, repeat Steps 1 & 2 for each page you want to edit. Once
@@ -145,7 +145,7 @@ GitHub lets users submit changes to the main repo through a `pull request`.
 Clicking the "Compare & pull request" button on your repo will send you to the
 page where you do this.
 
-![github's pull request page. red arrows are pointing to the branch selection, details textboxes, and submit button](/img/volunteer/bobadocspullrequest.jpg)
+![github's pull request page. red arrows are pointing to the branch selection, details textboxes, and submit button](../../../../assets/img/volunteer/bobadocspullrequest.jpg)
 
 Here's how you submit:
 
