Changes text to clarify that v0 is not accepting new members

--- a/src/content/docs/users/admins.mdx
+++ b/src/content/docs/users/admins.mdx
@@ -16,6 +16,12 @@ affiliated with the BobaBoard project or FujoCoded LLC.
 
 </Aside>
 
+<Aside type="caution" title="Notice">
+
+v0 is not accepting new members at the moment.
+
+</Aside>
+
 Please email the admins below if you need password reset help.
 
 | Realm         | Admin Email                                           |
