Wrong comment format kronk

--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -62,20 +62,16 @@ it's not a requirement that you consume or produce content with these themes,
 you do have to be okay with interacting and (anonymously) being friends with
 people who consume that content.
 
-<!-- 
-If this all sounds like a good fit, feel free to ask for an invite. 
--->
+{/* If this all sounds like a good fit, feel free to ask for an invite.  */}
 
 ### How to Get an Invite
 
 Unfortunately, v0 is not currently accepting new members. We'll keep everyone updated when/if this changes in the future.
 
-<!--
-Please email the realm admin listed for v0 on the
+{/* Please email the realm admin listed for v0 on the
 [Realm Admins](/users/admins) page. Please be sure to include the Realm
 name (vO) and an email you want to have the invite sent to (particularly if it's
-different than the one you're emailing from!).
---> 
+different than the one you're emailing from!). */}
 
 ### Help! I forgot my password!
 
