Changed inconsistent capitalization

--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -34,7 +34,7 @@ voluntary** and their use is not required or enforced/moderated.
 
 </Aside>
 
-V0 users are one-part volunteer, one-part extremely patient alpha testers, and
+v0 users are one-part volunteer, one-part extremely patient alpha testers, and
 one-part "anything goes" users.
 
 The people who fit in best in v0 are those who are okay dealing with the quirks
@@ -49,7 +49,7 @@ them, and who are willing to handle not being able to filter or block certain
 tags or content. Quality of life features like filtering and blocking are on the
 way, but have taken a backseat to things like moderation tools for Realms.
 
-V0 users should also be able to follow the
+v0 users should also be able to follow the
 [General BobaBoard Etiquette](/users/etiquette) without needing intense
 moderator oversight. That doesn't mean that moderation **never** happens, but it
 does mean that users need to be self-aware enough to make sure they aren't
@@ -63,6 +63,7 @@ you do have to be okay with interacting and (anonymously) being friends with
 people who consume that content.
 
 {/* If this all sounds like a good fit, feel free to ask for an invite.  */}
+
 ### How to Get an Invite
 
 Unfortunately, v0 is not currently accepting new members. We'll keep everyone updated when/if this changes in the future.
@@ -71,6 +72,7 @@ Unfortunately, v0 is not currently accepting new members. We'll keep everyone up
 [Realm Admins](/users/admins) page. Please be sure to include the Realm
 name (vO) and an email you want to have the invite sent to (particularly if it's
 different than the one you're emailing from!). */}
+
 ### Help! I forgot my password!
 
 Please email
