--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -17,7 +17,7 @@ The v0 Realm is currently not accepting more members.
 The v0 Realm is the Alpha version of BobaBoard, the place where the magic
 started and the flagship of the BobaBoard concept. It's a little wacky and a
 little off the beaten path. If you're interested in seeing what BobaBoard is all
-about, check out the below information to see if V0 might be a good fit.
+about, check out the below information to see if v0 might be a good fit.
 
 ## How to Sign-Up
 
