Changed text to clarify that v0 is not accepting new members (#116)
* Changes text to clarify that v0 is not accepting new members

* Wrong comment format kronk

* Removed spaces

* Changed inconsistent capitalization

* Ditto

--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -10,14 +10,14 @@ import { Aside } from "@astrojs/starlight/components";
 The v0 Realm is part of the boba.social Galaxy which is privately run by ms.
 boba. For more information, see [Galaxy & Realm Admins](../admins).
 
-The v0 Realm is currently not adding more members.
+The v0 Realm is currently not accepting more members.
 
 </Aside>
 
 The v0 Realm is the Alpha version of BobaBoard, the place where the magic
 started and the flagship of the BobaBoard concept. It's a little wacky and a
 little off the beaten path. If you're interested in seeing what BobaBoard is all
-about, check out the below information to see if V0 might be a good fit.
+about, check out the below information to see if v0 might be a good fit.
 
 ## How to Sign-Up
 
@@ -34,22 +34,22 @@ voluntary** and their use is not required or enforced/moderated.
 
 </Aside>
 
-V0 users are one-part volunteer, one-part extremely patient alpha testers, and
+v0 users are one-part volunteer, one-part extremely patient alpha testers, and
 one-part "anything goes" users.
 
-The people who fit in best in V0 are those who are okay dealing with the quirks
+The people who fit in best in v0 are those who are okay dealing with the quirks
 of a site still under active development and who are willing to **not only** put
 up with bugs, weird behaviors, and occasional site breakages, but who are also
 **not afraid to report it**.
 
-In general, V0 users need to be okay with managing their own risk - i.e. muting
+In general, v0 users need to be okay with managing their own risk - i.e. muting
 threads or boards that contain things they don't want to see, actively avoid
 [content notices](/users/howto/tagging#cn) that might trigger or squick
 them, and who are willing to handle not being able to filter or block certain
 tags or content. Quality of life features like filtering and blocking are on the
 way, but have taken a backseat to things like moderation tools for Realms.
 
-V0 users should also be able to follow the
+v0 users should also be able to follow the
 [General BobaBoard Etiquette](/users/etiquette) without needing intense
 moderator oversight. That doesn't mean that moderation **never** happens, but it
 does mean that users need to be self-aware enough to make sure they aren't
@@ -62,14 +62,16 @@ it's not a requirement that you consume or produce content with these themes,
 you do have to be okay with interacting and (anonymously) being friends with
 people who consume that content.
 
-If this all sounds like a good fit, feel free to ask for an invite.
+{/* If this all sounds like a good fit, feel free to ask for an invite.  */}
 
 ### How to Get an Invite
 
-Please email the realm admin listed for V0 on the
+Unfortunately, v0 is not currently accepting new members. We'll keep everyone updated when/if this changes in the future.
+
+{/* Please email the realm admin listed for v0 on the
 [Realm Admins](/users/admins) page. Please be sure to include the Realm
-name (VO) and an email you want to have the invite sent to (particularly if it's
-different than the one you're emailing from!).
+name (vO) and an email you want to have the invite sent to (particularly if it's
+different than the one you're emailing from!). */}
 
 ### Help! I forgot my password!
 
